website/i18n/de/docusaurus-plugin-content-docs/version-13.0/running-the-show/using-multiple-on-screen-workspaces.md
---
id: using-multiple-on-screen-workspaces
title: Using multiple on-screen workspaces
sidebar_label: Using multiple on-screen workspaces
original_id: using-multiple-on-screen-workspaces
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Es lassen sich diverse 'workspaces' (Arbeitsumgebungen) einrichten, die
ihrerseits die Anordnung und Anzeige der verschiedenen Fenster
speichern. Diese Arbeitsumgebungen lassen sich mit den Schaltflächen
links der Menütasten speichern und abrufen oder auf den grauen Tasten
des Pultes ablegen.

Man kann auch die Workspaces per Set List passend zum jeweiligen Song
umschalten.

## Das Menü View

Durch Betätigen der Taste <Keys.HardKey>View / Open</Keys.HardKey> gelangt man in das Menü
'View' (Ansicht). Hier lässt sich einstellen, was auf dem Touchscreen
(und ggf. dem externen Bildschirm) angezeigt wird.

-   <Keys.SoftKey>Window Options</Keys.SoftKey> (Fensteroptionen) gestattet das Verschieben und
    Vergrößern/Verkleinern der Fenster.

-   Mit <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> (ein bestimmtes Fenster öffnen) lassen
    sich alle verfügbaren Fenster aufrufen bzw. schließen.


