website/i18n/de/docusaurus-plugin-content-docs/version-15.1/running-the-show/using-multiple-on-screen-workspaces.md
---
id: using-multiple-on-screen-workspaces
title: Workspaces - Arbeitsumgebungen
sidebar_label: Workspaces - Arbeitsumgebungen
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Es lassen sich diverse **Workspaces** (Arbeitsumgebungen) einrichten, die
ihrerseits die Anordnung und Anzeige der verschiedenen Fenster
speichern. Diese Arbeitsumgebungen lassen sich auf den Schaltflächen
links der Menütasten (linker Bildschirmrand beim Diamond 9, Sapphire Touch und Titan 
Go sowie bei externen Displays) speichern und abrufen. Workspaces lassen 
sich auch auf Executor-Tasten speichern.

Drücken Sie zweimal auf <Keys.HardKey>Open/View</Keys.HardKey>, um die Auswahl der anzuzeigenden 
Fenster einzublenden. Siehe [Auswahl und Positionierung der Arbeitsfenster](../titan-basics/workspace-windows.md#auswahl-und-positionierung-der-arbeitsfenster)
für weitere Details zu den verschiedenen Fenstern.

Man kann auch die Workspaces per [Set List](../running-the-show/set-list-window.md) 
 passend zum jeweiligen Song umschalten.

## Das Menü View

Durch Betätigen der Taste <Keys.HardKey>Open/View</Keys.HardKey> gelangt man in das Menü
'View' (Ansicht). Hier lässt sich einstellen, was auf dem Touchscreen
(und ggf. dem externen Bildschirm) angezeigt wird.

-   &nbsp;<Keys.SoftKey>Window Options</Keys.SoftKey> (Fensteroptionen) gestattet das Verschieben und
    Vergrößern/Verkleinern der Fenster.

-   Mit <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> (ein bestimmtes Fenster öffnen) lassen
    sich auch über die Menütasten alle verfügbaren Fenster aufrufen bzw. schließen.


